src/test/ui/traits/negative-impls/negative-specializes-positive.stderr
error[E0751]: found both positive and negative implementation of trait `MyTrait` for type `u32`:
  --> $DIR/negative-specializes-positive.rs:7:1
   |
LL | impl<T> MyTrait for T {}
   | --------------------- positive implementation here
LL | impl !MyTrait for u32 {}
   | ^^^^^^^^^^^^^^^^^^^^^ negative implementation here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0751`.
